[gd_scene load_steps=2 format=3 uid="uid://0h0esjkdm67h"]

[ext_resource type="Script" path="res://src/scenes/menus/settings/audio_settings.gd" id="1_ll0rv"]

[node name="AudioSettings" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -75.5
offset_right = 200.0
offset_bottom = 75.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ll0rv")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Audio"
horizontal_alignment = 1

[node name="Master" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Master"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.25
text = "Master"

[node name="Slider" type="HSlider" parent="Master"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Music" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Music"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
text = "Music"

[node name="Slider" type="HSlider" parent="Music"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="SFX" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="SFX"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
text = "SFX"

[node name="Slider" type="HSlider" parent="SFX"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Back" type="Button" parent="."]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="Master/Slider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Music/Slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="SFX/Slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
